add h3 lines to html file

--- a/index.html
+++ b/index.html
@@ -17,33 +17,35 @@
 
 
     <main>
+        <section> 
+            <h2>Flexbot Row</h2>
+            <h3>use these three properties to create a Flexbox row layout</h3>
+        </section>
 
+        <section>
+            <h2>Flexbot Column</h2>
+            <h3>use this to create a Flexbox column layout</h3>
+        </section>
 
-<section> 
-    <h2>Flexbot Row</h2>
-</section>
+        <section>
+            <h2>CSS Grid Layout</h2>
+            <h3>Build a 12-column layout using css grid</h3>
+        </section>
 
-<section>
-<h2>Flexbot Column</h2>
-</section>
+        <section>
+            <h2>Linear Gradients</h2>
+            <h3>This will create a background linear gradient from top to bottom</h3>
+        </section>
 
-<section>
-    <h2>CSS Grid Layout</h2>
-</section>
+        <section>
+            <h2>Box Transition Glow</h2>
+            <h3>use transitions and box shadows to glow on hover</h3>
+        </section>
 
-<section>
-        <h2>Linear Gradients</h2>
-</section>
-
-<section>
-    <h2>Box Transition Glow</h2>
-</section>
-
-<section>
-    <h2>Overlay Card with Title</h2>
-</section>
-
-
+        <section>
+            <h2>Overlay Card with Title</h2>
+            <3>use position properties and negative margins to raise elements higher than their natural starting point</3>
+        </section>
     </main>
 
 
