--- a/index.html
+++ b/index.html
@@ -19,32 +19,71 @@
     <main>
         <section> 
             <h2>Flexbot Row</h2>
-            <h3>use these three properties to create a Flexbox row layout</h3>
+            <p>use these three properties to create a Flexbox row layout</p>
+            <pre><code>         .row {
+                display: flex; 
+                flex-direction: row; 
+                flex-wrap: wrap;
+            }
+            </code></pre>
         </section>
 
         <section>
             <h2>Flexbot Column</h2>
-            <h3>use this to create a Flexbox column layout</h3>
+            <p>use this to create a Flexbox column layout</p>
+            <pre><code>         .column {
+                display: flex; 
+                flex-direction: column;
+            }
+            </code></pre>
         </section>
 
         <section>
             <h2>CSS Grid Layout</h2>
-            <h3>Build a 12-column layout using css grid</h3>
+            <p>Build a 12-column layout using css grid</p>
+            <pre><code>         .grid {
+                display: grid; 
+                width: 100%; 
+                grid template: columns, repeat (12, 1fr);
+            }
+            </code></pre>
         </section>
 
         <section>
             <h2>Linear Gradients</h2>
-            <h3>This will create a background linear gradient from top to bottom</h3>
+            <p>This will create a background linear gradient from top to bottom</p>
+            <pre><code>         .linear-gradient-background {
+                background-image: linear-gradient(
+                    rgba(232, 102, 236, 0.3) 0%,
+                    rgba(232, 102, 236, 0.6) 100%
+                );
+            }
+            </code></pre>
         </section>
 
         <section>
             <h2>Box Transition Glow</h2>
-            <h3>use transitions and box shadows to glow on hover</h3>
+            <p>use transitions and box shadows to glow on hover</p>
+            <pre><code>         .linear-gradient-background {
+                background-image: linear-gradient(
+                    rgba(232, 102, 236, 0.3) 0%,
+                    rgba(232, 102, 236, 0.6) 100%
+                );
+            }
+            </code></pre>
+            
         </section>
 
         <section>
             <h2>Overlay Card with Title</h2>
-            <3>use position properties and negative margins to raise elements higher than their natural starting point</3>
+            <p>use position properties and negative margins to raise elements higher than their natural starting point</p>
+            <pre><code>         .linear-gradient-background {
+                background-image: linear-gradient(
+                    rgba(232, 102, 236, 0.3) 0%,
+                    rgba(232, 102, 236, 0.6) 100%
+                );
+            }
+            </code></pre>
         </section>
     </main>
 
