--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Cheat Sheet</title>
 </head>
+
 <body>
-    
+
     <header>
 
         <h1>Welcome!</h1>
@@ -17,7 +19,7 @@
 
 
     <main>
-        <section> 
+        <section>
             <h2>Flexbot Row</h2>
             <p>use these three properties to create a Flexbox row layout</p>
             <pre><code>         .row {
@@ -71,12 +73,13 @@
                 );
             }
             </code></pre>
-            
+
         </section>
 
         <section>
             <h2>Overlay Card with Title</h2>
-            <p>use position properties and negative margins to raise elements higher than their natural starting point</p>
+            <p>use position properties and negative margins to raise elements higher than their natural starting point
+            </p>
             <pre><code>         .linear-gradient-background {
                 background-image: linear-gradient(
                     rgba(232, 102, 236, 0.3) 0%,
@@ -92,4 +95,5 @@
 
 
 </body>
+
 </html>
