added stylesheet and styles within

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>CSS Cheat Sheet</title>
 
 </head>
@@ -21,6 +21,7 @@
 
 
     <main>
+        <div></div>
         <section>
             <h2>Flexbot Row</h2>
             <p>use these three properties to create a Flexbox row layout</p>
@@ -52,7 +53,7 @@
             }
             </code></pre>
         </section>
-
+        <div></div>
         <section>
             <h2>Linear Gradients</h2>
             <p>This will create a background linear gradient from top to bottom</p>
